Prototype Height map rendering. Refactor CBT.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,5 +47,10 @@ else()
 		COMMAND_EXPAND_LISTS)
 endif()
 
+add_custom_command(
+		TARGET TestApp POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/assets $<TARGET_FILE_DIR:TestApp>/assets
+		COMMAND_EXPAND_LISTS)
+
 Flex_CopyBinaries(TestApp)
 Flex_CopyAssets(TestApp)
