--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,16 +39,11 @@ if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 	add_custom_command(TARGET TestApp POST_BUILD
 		COMMAND mklink /j ${TARGETPATH} ${SOURCEPATH} || echo ""
 		COMMAND_EXPAND_LISTS)
-else()
-	add_custom_command(
-		TARGET TestApp POST_BUILD
-		COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/assets/shaders/CBT $<TARGET_FILE_DIR:TestApp>/assets/shaders/CBT
-		COMMAND_EXPAND_LISTS)
 endif()
 
 add_custom_command(
 		TARGET TestApp POST_BUILD
-		COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/assets $<TARGET_FILE_DIR:TestApp>/assets
+		COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/assets $<TARGET_FILE_DIR:TestApp>/assets  || echo ""
 		COMMAND_EXPAND_LISTS)
 
 Flex_CopyBinaries(TestApp)
